--- a/simias/other/SimpleServer/README
+++ b/simias/other/SimpleServer/README
@@ -1,9 +1,17 @@
-The SimpleServer assembly is an add on to the iFolder client
+The SimpleServer assembly was  added to the iFolder project so
+developers and curious users could setup their own dedicated
+iFolder server.  For the time being, Simple Server cannot
+run side by side with the iFolder client under the same local user
+account.  You must dedicate a separate machine or run Simple
+Server in a separate user session.
+
+The SimpleServer assembly is an add on thead service to Simias
 which enables it to become a simple iFolder server.  The
 member list (users) is created from a simple xml file -
-SimpleServer.xml.  The SimpleServer module synchronizes
-the SimpleServer.xml members to the SimpleServer roster
-contained in the Simias store.
+SimpleServer.xml which is located in the (simias-target-directory)/etc.
+Simple Server synchronizes the SimpleServer.xml members to the Simple Server
+roster contained in the Simias store.  Once Simple Server is up and
+running you can add/delete members in the xml file.
 
 To install the SimpleServer module add the following line
 to your Simias.config file located at $(HOME)/.local/share/simias
@@ -17,6 +25,22 @@ The line should be added to the Services section of the Simias.config file
   </section>
 </configuration>
 
+You must also remove three services that will already be present in the configuration
+file.  They are: 
+      <Service name="Simias Domain Watcher" assembly="Simias" enabled="True" type="Thread" class="Simias.DomainWatcher.Service" />
+      <Service name="Simias PO Service" assembly="Simias" enabled="True" type="Thread" class="Simias.POBox.POService" />
+      <Service name="Simias Sync Client" assembly="Simias" enabled="True" type="Thread" class="Simias.Sync.SyncClient" />
 
-When an iFolder client joins this domain all logins (username & password) are 
-validated against the Member in the XML file.
+Also located in this directory are two .config files.  If you are running the server
+on a Windows machine copy "web.config" to (simias-target-directory)/web directory.
+If you are running Linux, copy "web.config.linux" to to your web directory and rename
+the file to "web.config".
+
+You can "tail" the log file to check if Simple Server is synchronizing the xml member
+list to the Simias roster.  The log file is located at: $(HOME)/.local/share/simias/Simias.log
+
+When an iFolder client joins the Simple Server domain all logins (username & password) are 
+validated against the Member in the XML file.  The iFolder client may join or attach to multiple
+Simple Servers.
+
+Enjoy!
